crates/solite-fmt/src/snapshots/solite_fmt__tests__create_trigger_temp.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create temp trigger tr_temp before insert on t begin select raise(abort, 'not allowed'); end

-- Output:
create temp trigger tr_temp
before insert on t
begin
  select raise(abort, 'not allowed');
end;
