crates/solite-fmt/src/snapshots/solite_fmt__tests__create_trigger_with_when.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create trigger tr_t after delete on t when old.status = 'active' begin insert into deleted values (old.id); end

-- Output:
create trigger tr_t
after delete on t
when old.status = 'active'
begin
  insert into deleted
  values
    (old.id);
end;
