crates/solite-fmt/src/snapshots/solite_fmt__tests__create_unique_index.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create unique index idx_t_a on t(a)

-- Output:
create unique index idx_t_a on t(a);
