crates/solite-fmt/src/snapshots/solite_fmt__tests__create_view.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create view v as select a, b from t

-- Output:
create view v as
select
  a,
  b
from t;
