crates/solite-fmt/src/snapshots/solite_fmt__tests__create_view_if_not_exists.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create view if not exists v as select a from t

-- Output:
create view if not exists v as
select a from t;
