crates/solite-fmt/src/snapshots/solite_fmt__tests__delete_all.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- delete from t

-- Output:
delete from t;
