crates/solite-fmt/src/snapshots/solite_fmt__tests__delete_with_limit.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- delete from t where x > 10 order by x limit 5

-- Output:
delete from t
where x > 10
order by x
limit 5;
